fixed pinned-content z-index

--- a/addon/styles/themes/flat-concept/modules/pinned-content.less
+++ b/addon/styles/themes/flat-concept/modules/pinned-content.less
@@ -36,7 +36,7 @@
     transition: transform 400ms ease;
   }
   &[style^="position"] {
-    z-index: 100;
+    z-index: 7;
     &:after {
       opacity: 1;
     }
